# Stock_Analyze

./: .coverage  README.md  pyproject.toml
anallyser/: __init__.py  main.py
starter/: main.py
tests/: main_test.py
